<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activitylayout_ppal" tools:context=".PpalActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activitylayout_ppal"
    android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unlock100x100"
            android:layout_gravity="center"
            android:contentDescription="@string/descripcion"/>
        <EditText
            android:id="@+id/txtusuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/splastxtmensaje"
            android:textColor="#030303"
            android:layout_marginBottom="10dp">
        </EditText>
        <EditText
            android:id="@+id/txtpasword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/splastxtpassword"
            android:textColor="#030303"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword">
        </EditText>
        <Button
            android:id="@+id/logear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/splashbtnenviar"
            android:gravity="center_vertical|center_horizontal">
        </Button>

</LinearLayout>

</ScrollView>